# absa-ac

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Containerfile  DOCKER.md  Dockerfile  PODMAN.md  README.md  SECURITY.md  architecture_analysis.md  architecture_visualization.md  bot.py  config.cors.test.json  config.json.example  go.mod  go.sum  main.go  main_test.go  pyproject.toml  test_api_token_fails.sh  test_cleanup.sh  test_cors_fails.sh
.github/workflows/: CLAUDE.md  codeql.yml  docker-publish.yaml  docker-publish.yml  (+2 more)
api/: CLAUDE.md  README.md  benchmarks_test.go  csrf.go  csrf_middleware.go  csrf_test.go  e2e_test.go  handlers.go  handlers_test.go  integration_security_test.go  middleware.go  middleware_benchmark_test.go  middleware_integration_test.go  middleware_security_test.go  middleware_test.go  response.go  routes.go  server.go  server_test.go  static_test.go
pkg/: CLAUDE.md
plans/: CLAUDE.md  api-frontend.md  api-security-01.md  auto-refresh.md  basic-auth.md  bot-api.md  config-edit.md  data-config-json.md  fix-proxy-01.md  fix-reload.md  no-config-at-startup.md  plan-dynamic-reload.md  proxy.md  remove-proxy.md  sec-fixes-01.md  sec-review-01.md  solution-design-sec.md  upload-download.md  web-backend.md  webfront-fix-01.md  webfront-fix-02.json  webfront-simple.md  webfront-svelte.md  webfront.json  webfront.md
static/: CLAUDE.md  README.md  index.html
webfront/: .env.example  .eslintrc.cjs  .tsconfig.json  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+45 files in other folders)
