[project]
name = "ac-discordbot"
version = "0.1.0"
description = "Discord bot for monitoring Assetto Corsa racing servers"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "discord.py>=2.3.2",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
